<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lineLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.icedragon.json.InfoActivity">

    <ua.icedragon.json.LockableScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:id="@+id/title"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="left"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textAlignment="gravity"
                    android:textColor="#000" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/logo"
                    android:contentDescription="@string/logo"
                    android:layout_weight="1"
                    android:layout_gravity="top"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:id="@+id/description"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="left"
                    android:textAlignment="gravity"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/technologies"
                    android:id="@+id/technologies"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="left"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textAlignment="gravity"
                    android:layout_marginBottom="15dp"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supportedScreens"
                    android:id="@+id/supportedScreens"
                    android:textSize="18sp"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textAlignment="gravity"
                    android:layout_marginBottom="15dp"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/solutionTypes"
                    android:id="@+id/solutionTypes"
                    android:textSize="18sp"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textAlignment="gravity"
                    android:layout_marginBottom="15dp"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clientName"
                    android:id="@+id/clientName"
                    android:textSize="18sp"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textAlignment="gravity"
                    android:textColor="#000" />

                <ViewFlipper
                    android:id="@+id/viewFlipper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:measureWithLargestChild="false">

                    <Button
                        android:id="@+id/left"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="50dp"
                        android:enabled="true"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />

                    <Button
                        android:id="@+id/right"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="50dp"
                        android:enabled="true"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />
                </LinearLayout>

                <Button
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:width="98dp"
                    android:text="@string/backBtn"
                    android:layout_gravity="right" />

            </LinearLayout>

        </LinearLayout>

    </ua.icedragon.json.LockableScrollView>

</LinearLayout>




